--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -49,7 +49,7 @@
 
             <!-- Grid column -->
             <div class="col-md-4 mx-auto">
-                <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Visit us on social medias</h5>
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Visit us on social media</h5>
                 <div>
                     <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"> </i></a>
                     <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"> </i></a>
@@ -62,13 +62,12 @@
     </div>
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3"><small class="text-muted">© 2021 copyright for their respective authors |&nbsp
+    <div class="footer-copyright text-center py-3"><small class="text-muted">© 2021 copyright for their respective
+        authors |&nbsp
     </small><a href="https://www.catharsispark.com/"><small class="text-muted">catharsispark.com</small></a>
     </div>
     <!-- Copyright -->
 
 </footer>
-
-</body>
 
 </html>
