--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -3,7 +3,8 @@
 
 <nav th:fragment="menu" class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #b3d9b1;">
     <a class="navbar-brand" href="/"><img src="../images/adv_logo_02.png" width="50px" height="auto"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -26,7 +27,7 @@
             </li>
             -->
             <li class="nav-item">
-                <a class="nav-link" href="/about">About Us</a>
+                <a class="nav-link" href="/about">About us</a>
             </li>
 
             <li class="nav-item">
@@ -38,7 +39,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/booking/new">New Booking</a>
+                <a class="nav-link" href="/booking/new">Book activity</a>
             </li>
 
             <li class="nav-item">
@@ -50,8 +51,5 @@
                         </li>
             -->
         </ul>
-
     </div>
 </nav>
-
-<body>
