--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -8,10 +8,15 @@
     <title>Activities</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- Bootstrap for JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,43 +24,46 @@
 </head>
 <body>
 
-<div th:insert="fragments/header :: header"></div>
-<div th:insert="fragments/menu :: menu"></div>
-<div th:insert="fragments/jumbotron :: jumbotron"></div>
+    <div th:insert="fragments/header :: header"></div>
+    <div th:insert="fragments/menu :: menu"></div>
+    <div th:insert="fragments/jumbotron :: jumbotron"></div>
 
-<div class="container" id="main">
-    <div class="row">
-        <div class="col-md-10">
-            <div id="form-container">
-                <table class="table table-striped table-hover table-lg" id="tbl">
-                    <thead>
-                    <tr style="color:white">
-                        <th scope="col">Activity</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Employee Name</th>
-                    </tr>
-                    </thead>
-                    <tbody style="text-align: left; color:white">
-                    </tbody>
-                </table>
+    <div class="container" id="main">
+        <div class="row">
+            <div class="col-md-10">
+                <div id="form-container">
+                    <table class="table table-striped table-hover table-lg" id="tbl">
+                        <thead>
+                        <tr style="color:white">
+                            <th scope="col">Activity</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Employee Name</th>
+                        </tr>
+                        </thead>
+                        <tbody style="text-align: left; color:white">
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-        <!--
-        <div class="col-md-2">
-            <div id="form-container">
-                <p><img src="images/members_grid_web.jpg" width="150%" height="auto" alt="members-picture">
+            <!--
+            <div class="col-md-2">
+                <div id="form-container">
+                    <p><img src="images/members_grid_web.jpg" width="150%" height="auto" alt="members-picture">
+                </div>
             </div>
-        </div>
-        -->
+            -->
 
+        </div>
     </div>
-</div>
+    <div th:insert="fragments/footer :: footer"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script>
     $(document).ready(function () {
         $.ajax({
-            url: "http://localhost:8085/activities",
+            // url: "http://localhost:8085/activities",
+            url: "http://54.234.57.19:8085/activities",
             success: function (result) {
                 console.log(result);
                 let tableContent = "";
@@ -71,18 +79,6 @@
             }
         });
     });
-</script>
-<script>
-    function redirect(querySelector, url) {
-        document.querySelector(querySelector)
-            .addEventListener('click', () => {
-                window.location.href = url
-            })
-        console.log("query:" + querySelector, "url:" + url)
-    }
-
-</script>
-
-    <div th:insert="fragments/footer :: footer"></div>
+    </script>
 </body>
 </html>
