--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -22,80 +22,72 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-    <!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    -->
+
 
 </head>
 <body>
 
-<div th:insert="fragments/header :: header"></div>
-<div th:insert="fragments/menu :: menu"></div>
-<div th:insert="fragments/jumbotron :: jumbotron"></div>
+    <div th:insert="fragments/header :: header"></div>
+    <div th:insert="fragments/menu :: menu"></div>
+    <div th:insert="fragments/jumbotron :: jumbotron"></div>
 
-<div class="container" id="main">
-    <div class="row">
-        <div class="col-md-12">
-            <div id="form-container">
-                <table class="table table-striped table-hover table-lg" id="tbl">
-                    <thead>
-                    <tr>
-                        <th scope="col">Booking ID</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Participants</th>
-                        <!--                            <th scope="col">Activity ID</th>-->
-                        <th scope="col">Activity name</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Instructor</th>
-                    </tr>
-                    </thead>
-                    <tbody style="text-align: left; color:#ffffff">
-                    </tbody>
-                </table>
+    <div class="container" id="main">
+        <div class="row">
+            <div class="col-md-12">
+                <div id="form-container">
+                    <table class="table table-striped table-hover table-lg" id="tbl">
+                        <thead>
+                        <tr>
+                            <th scope="col">Booking ID</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Time</th>
+                            <!--                            <th scope="col">Activity ID</th>-->
+                            <th scope="col">Participants</th>
+                            <th scope="col">Activity name</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Instructor</th>
+                        </tr>
+                        </thead>
+                        <tbody style="text-align: left; color:white">
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $.ajax({
-            url: "http://localhost:8085/booking",
-            success: function (result) {
-                console.log(result)
-                let tableRows = "";
-                $.each(result, function (key, val) {
-                    tableRows += "<tr>";
-                    tableRows +=
-                        "<td>" + val["bookingId"] +
-                        "</td><td>" + val["bookingDate"] +
-                        "</td><td>" + val["participantCount"] +
-                        // "</td><td>" + val["activity"]["actId"] +
-                        "</td><td>" + val["activity"]["actName"] +
-                        "</td><td>" + val["activity"]["actDescription"] +
-                        "</td><td>" + val["activity"]["employee"] + "</td>";
+    <div th:insert="fragments/footer :: footer"></div>
 
-                });
-                tableRows += "</tr>";
-                $('#tbl tbody').html(tableRows)
-            }
-        });
-    })
-</script>
-<script>
-    function redirect(querySelector, url) {
-        document.querySelector(querySelector)
-            .addEventListener('click', () => {
-                window.location.href = url
-            })
-        console.log("query:" + querySelector, "url:" + url)
-    }
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                // url: "http://localhost:8085/booking",
+                url: "http://54.234.57.19:8085/booking",
+                success: function (result) {
+                    console.log(result)
+                    let tableRows = "";
+                    $.each(result, function (key, val) {
+                        tableRows += "<tr>";
+                        tableRows +=
+                            "<td>" + val["bookingId"] +
+                            "</td><td>" + val["bookingDate"] +
+                            "</td><td>" + val["bookingTime"] +
+                            "</td><td>" + val["participantCount"] +
+                            // "</td><td>" + val["activity"]["actId"] +
+                            "</td><td>" + val["activity"]["actName"] +
+                            "</td><td>" + val["activity"]["actDescription"] +
+                            "</td><td>" + val["activity"]["employee"] + "</td>";
 
-</script>
-
-<div th:insert="fragments/footer :: footer"></div>
+                    });
+                    tableRows += "</tr>";
+                    $('#tbl tbody').html(tableRows)
+                }
+            });
+        })
+    </script>
 </body>
 </html>
 
