--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-<!--     Bootstrap for JS-->
+    <!--     Bootstrap for JS-->
+    <link rel="stylesheet" href="/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
@@ -20,70 +21,90 @@
 </head>
 <body>
 
-<div th:insert="fragments/header :: header"></div>
-<div th:insert="fragments/menu :: menu"></div>
-<div th:insert="fragments/jumbotron :: jumbotron"></div>
+    <div th:insert="fragments/header :: header"></div>
+    <div th:insert="fragments/menu :: menu"></div>
+    <div th:insert="fragments/jumbotron :: jumbotron"></div>
 
-<div class="container" id="main">
-    <div class="row">
-        <h1>New booking</h1>
-        <div class="col-md-10">
-            <div id="form-container">
-                <table class="table table-striped table-lg" id="tbl">
-                    <tbody>
-                    <tr>
-                        <td class="align-baseline">
-                            <input type="datet" id="bookingDate" placeholder="Date..."><br>
-                            <input type="text" id="participants" placeholder="Participants..."><br>
-                            <input type="number" id="activity" placeholder="Activity ID..."><br>
-                            <button id="add-booking" class="btn btn-info">Add</button>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+    <div class="container" id="main">
+        <div class="row">
+            <h1>New booking</h1>
+            <div class="col-md-10">
+                <div id="form-container">
+                    <table class="table table-striped table-lg" id="tbl">
+                        <tbody>
+                        <tr>
+                            <td class="align-baseline">
+                                <input type="date" id="bookingDate" placeholder="Date..."><br>
+                                <input type="time" id="bookingTime" placeholder="Time..."><br>
+                                <input type="text" id="participants" placeholder="Participants..."><br>
+                                <select id="dropD" placeholder="Activity..."></select><br>
+                                <button id="add-booking" class="btn btn-info">Book activity</button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        let bookingString;
 
-<script>
-    $(function () {
-        $('#add-booking').on('click', function () {
-            let dataString = {
-                bookingDate: $('#bookingDate').val(),
-                participantCount: $('#participants').val(),
-                activity: {
-                    actId: $('#activity').val()
-                }
-
-            }
-            // dataString.bookingDate = dataString.bookingDate.split("-").reverse().join("-");
-
+        $(document).ready(function () {
             $.ajax({
-                type: 'POST',
-                dataType: 'json',
-                data: JSON.stringify(dataString),
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-type': 'application/json'
-                },
-                // url: 'http://54.234.57.19:8085/newbooking',
-                url: 'http://localhost:8085/newbooking',
-                success: function (data) {
-                    console.log(data)
-                },
-
-                error: function () {
-                    alert(this.data)
+                // url: "http://localhost:8085/activities",
+                url: "http://54.234.57.19:8085/activities",
+                success: function (result) {
+                    console.log(result)
+                    let options = "";
+                    $.each(result, function (key, val) {
+                        options += "<option>" + val["actName"]
+                    });
+                    bookingString = $("#dropD");
+                    $(bookingString).html(options)
                 }
-            })
+            });
+        })
+
+        $(function () {
+            $('#add-booking').on('click', function () {
+                let dataString = {
+                    bookingDate: $('#bookingDate').val(),
+                    bookingTime: $('#bookingTime').val(),
+                    participantCount: $('#participants').val(),
+                    activity: {
+                        actId: $("#dropD").get(0).selectedIndex
+                    }
+                }
+                function maxCheck(x) {
+                    if (x <= 8) {
+                        return x + 1;
+                    }
+                }
+
+                bookingString = maxCheck(dataString.activity.actId)
+
+                console.log(dataString.activity.actId = bookingString);
+                $.ajax({
+                    type: 'POST',
+                    dataType: 'json',
+                    data: JSON.stringify(dataString),
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-type': 'application/json'
+                    },
+                    url: 'http://54.234.57.19:8085/newbooking',
+                    // url: 'http://localhost:8085/newbooking',
+                    success: function (data) {
+                        console.log(data)
+                    }
+                })
+            });
         });
-
-    });
-</script>
-
-       <div th:insert="fragments/footer :: footer"></div>
+    </script>
 </body>
 </html>
