--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>New Booking</title>
+    <title>Book activity</title>
 
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -27,22 +27,23 @@
 
     <div class="container" id="main">
         <div class="row">
-            <h1>New booking</h1>
+            <h1>Book activity</h1>
             <div class="col-md-10">
                 <div id="form-container">
                     <table class="table table-striped table-lg" id="tbl">
                         <tbody>
                         <tr>
                             <td class="align-baseline">
-                                <input type="date" id="bookingDate" placeholder="Date..."><br>
-                                <input type="time" id="bookingTime" placeholder="Time..."><br>
-                                <input type="text" id="participants" placeholder="Participants..."><br>
-                                <select id="dropD" placeholder="Activity..."></select><br>
-                                <button id="add-booking" class="btn btn-info">Book activity</button>
+                                <input type="date" required id="bookingDate" placeholder="Date..."><br>
+                                <input type="time" required id="bookingTime" placeholder="Time..."><br>
+                                <input type="text" required id="participants" placeholder="Participants..."><br>
+                                <select id="dropD" required placeholder="Activity..."></select><br>
+                                <button id="add-booking" class="btn btn-info">Book</button>
                             </td>
                         </tr>
                         </tbody>
                     </table>
+                        <p id="err" style="color: red"></p>
                 </div>
             </div>
         </div>
@@ -73,6 +74,7 @@
         $(function () {
             $('#add-booking').on('click', function () {
                 let dataString = {
+                    bookingId: 1,
                     bookingDate: $('#bookingDate').val(),
                     bookingTime: $('#bookingTime').val(),
                     participantCount: $('#participants').val(),
@@ -100,7 +102,10 @@
                     url: 'http://54.234.57.19:8085/newbooking',
                     // url: 'http://localhost:8085/newbooking',
                     success: function (data) {
-                        console.log(data)
+                            console.log(data);
+                    },
+                    error: function (){
+                        $('#err').html("Oops, something went wrong!")
                     }
                 })
             });
