activity, booking og newbooking virker 100%

--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -59,26 +59,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script>
-    $(document).ready(function () {
-        $.ajax({
-            // url: "http://localhost:8085/activities",
-            url: "http://54.234.57.19:8085/activities",
-            success: function (result) {
-                console.log(result);
-                let tableContent = "";
-                $.each(result, function (key, value) {
-                    tableContent += "<tr>";
-                    tableContent +=
-                        "<td>" + value["actName"] +
-                        "</td><td>" + value["actDescription"] +
-                        "</td><td>" + value["employee"] + "</td>";
-                });
-                tableContent += "</tr>";
-                $('#tbl tbody').html(tableContent)
-            }
-        });
-    });
-    </script>
+    <script src="../js/activities.js"></script>
 </body>
 </html>
