--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -30,6 +30,8 @@
             <h1>Book activity</h1>
             <div class="col-md-10">
                 <div id="form-container">
+                    <form>
+
                     <table class="table table-striped table-lg" id="tbl">
                         <tbody>
                         <tr>
@@ -38,11 +40,12 @@
                                 <input type="time" required id="bookingTime" placeholder="Time"><br>
                                 <input type="text" required id="participants" placeholder="How many persons?"><br>
                                 <select id="dropD" required placeholder="Choose activity"></select><br>
-                                <button id="add-booking" class="btn btn-info">Book</button>
+                                <button type="button" id="add-booking" class="btn btn-info">Book</button>
                             </td>
                         </tr>
                         </tbody>
                     </table>
+                    </form>
                         <p id="err" style="color: red"></p>
                 </div>
             </div>
@@ -52,65 +55,10 @@
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        let bookingString;
+    <script src="../js/newBooking.js"></script>
+<script>
 
-        $(document).ready(function () {
-            $.ajax({
-                // url: "http://localhost:8085/activities",
-                url: "http://54.234.57.19:8085/activities",
-                success: function (result) {
-                    console.log(result)
-                    let options = "";
-                    $.each(result, function (key, val) {
-                        options += "<option>" + val["actName"]
-                    });
-                    bookingString = $("#dropD");
-                    $(bookingString).html(options)
-                }
-            });
-        })
-
-        $(function () {
-            $('#add-booking').on('click', function () {
-                let dataString = {
-                    bookingId: 1,
-                    bookingDate: $('#bookingDate').val(),
-                    bookingTime: $('#bookingTime').val(),
-                    participantCount: $('#participants').val(),
-                    activity: {
-                        actId: $("#dropD").get(0).selectedIndex
-                    }
-                }
-                function maxCheck(x) {
-                    if (x <= 8) {
-                        return x + 1;
-                    }
-                }
-
-                bookingString = maxCheck(dataString.activity.actId)
-
-                console.log(dataString.activity.actId = bookingString);
-                $.ajax({
-                    type: 'POST',
-                    dataType: 'json',
-                    data: JSON.stringify(dataString),
-                    headers: {
-                        'Accept': 'application/json',
-                        'Content-type': 'application/json'
-                    },
-                    url: 'http://54.234.57.19:8085/newbooking',
-                    // url: 'http://localhost:8085/newbooking',
-                    success: function (data) {
-                            console.log(data);
-                    },
-                    error: function (){
-                        $('#err').html("Oops, something went wrong!")
-                    }
-                })
-            });
-        });
-    </script>
+</script>
     <br><br>
     <div th:insert="fragments/footer :: footer"></div>
 </body>
