--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,20 +45,6 @@
 <div th:insert="fragments/footer :: footer"></div>
 
 </body>
-<script>
-    const loginForm = document.getElementById("login-form");
-    const loginButton = document.getElementById("login-form-submit");
+<script src="../js/login.js"></script>
 
-    loginButton.addEventListener("click", (e) => {
-        e.preventDefault();
-        const username = loginForm.username.value;
-        const password = loginForm.password.value;
-
-        if (username === "user" && password === "pass") {
-            location.href='/'
-        } else {
-            alert("Wrong username and/or password");
-        }
-    })
-</script>
 </html>
