Frontend editBooking GetMapping rettelse

--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -49,6 +49,7 @@
                             <th scope="col">Description</th>
                             <th scope="col">Instructor</th>
                             <th scope="col"></th>
+                            <th scope="col"></th>
 
                         </tr>
                         </thead>
