edit booking work in process

--- a/src/main/resources/templates/editbooking.html
+++ b/src/main/resources/templates/editbooking.html
@@ -40,7 +40,7 @@
                                 <input type="time" required id="bookingTime" placeholder="Time"><br>
                                 <input type="text" required id="participants" placeholder="How many persons?"><br>
                                 <select id="dropD" required placeholder="Choose activity"></select><br>
-                                <button type="button" id="add-booking" class="btn btn-info">Save</button>
+                                <button type="button" id="edit-booking" class="btn btn-info">Save</button>
                             </td>
                         </tr>
                         </tbody>
@@ -55,7 +55,7 @@
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../js/newBooking.js"></script>
+    <script src="/js/editBooking.js"></script>
 <script>
 
 </script>
