Date min + max, delete + edit knapper

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -97,6 +97,10 @@ input, select, textarea{
     -webkit-box-sizing:content-box;
 }
 
+#img{
+    border:0px;
+}
+
 .btn{
     color: #333333;
     background-color: #0a850b;
@@ -284,35 +288,28 @@ input[type="file"] {
 
 /* Style the counter cards (den her fil skulle måske være en scss fil i stedet for en css fil) */
 main {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 2fr));
-    /*grid-gap: 1fr;
-    cursor: pointer;*/
-    margin-top: 5%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(18rem, 2fr));
+        /*grid-gap: 1fr;
+        cursor: pointer;*/
+        margin-top: 5%;
 
-    .card {
-        box-shadow: 0 4px 8px 0 rgba(255, 0, 153, 0.3); /* this adds the "card" effect */
-        -ms-flex: 35%; /* IE10 */
-        flex: 35%;
-        max-width: 35%;
-        padding: 0 4px;
-        text-align: left;
-        background-color: #f1f1f1;
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(255, 0, 153, 0.3); /* this adds the "card" effect */
+            -ms-flex: 35%; /* IE10 */
+            flex: 35%;
+            max-width: 35%;
+            /*padding: 0 4px;*/
+            text-align: left;
+            background-color: #f1f1f1;
+        }
+
         h1, h2, h3, h4, h5, h6 {
-            color: #b3d9b1;
-            font-family: 'Courier Prime', serif;}
+        color: #b3d9b1;
+        font-family: 'Courier Prime', serif;
+        }
 
-        transition: transform 1s;
-
-            .info {
-                padding: 0 4px;
-                color: #b3d9b1;
-            }
-            .img {
-                width: 100%;
-            }
     }
-}
 
 
 /* Responsive layout - makes a two column-layout instead of four columns */
