--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -36,7 +36,7 @@
                         <tbody>
                         <tr>
                             <td class="align-baseline">
-                                <input type="date" required id="bookingDate" placeholder="Date">
+                                <input type="date" min='2021-03-25' max='2030-12-31' required id="bookingDate" placeholder="Date">
                                 <input type="time" required id="bookingTime" placeholder="Time"><br>
                                 <input type="text" required id="participants" placeholder="How many persons?"><br>
                                 <select id="dropD" required placeholder="Choose activity"></select><br>
