--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -27,7 +27,7 @@
             <div class="col-md-4 mx-auto">
                 <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Info</h5>
                 <!-- Links -->
-                <ul class="col-md-1">
+                <ul class="col-lg mx-auto">
                     <li>
                         <a href="#!">Legal terms</a>
                     </li>
